data(intersections): minor edits

--- a/notebooks/identify_street_intersections.ipynb
+++ b/notebooks/identify_street_intersections.ipynb
@@ -1064,6 +1064,114 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>street_id</th>\n",
+       "      <th>cross_id</th>\n",
+       "      <th>street</th>\n",
+       "      <th>cross</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>threshold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>A St</td>\n",
+       "      <td>Adams St</td>\n",
+       "      <td>-71.125670</td>\n",
+       "      <td>42.250592</td>\n",
+       "      <td>0.005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>81</td>\n",
+       "      <td>A St</td>\n",
+       "      <td>Allen St</td>\n",
+       "      <td>-71.125670</td>\n",
+       "      <td>42.250592</td>\n",
+       "      <td>0.005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>242</td>\n",
+       "      <td>A St</td>\n",
+       "      <td>Averbuch Ter</td>\n",
+       "      <td>-71.125670</td>\n",
+       "      <td>42.250592</td>\n",
+       "      <td>0.005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>251</td>\n",
+       "      <td>A St</td>\n",
+       "      <td>B St</td>\n",
+       "      <td>-71.125401</td>\n",
+       "      <td>42.250469</td>\n",
+       "      <td>0.005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>252</td>\n",
+       "      <td>A St</td>\n",
+       "      <td>B St</td>\n",
+       "      <td>-71.125401</td>\n",
+       "      <td>42.250469</td>\n",
+       "      <td>0.005</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   street_id  cross_id street         cross        lat        lon  threshold\n",
+       "0          1        20   A St      Adams St -71.125670  42.250592      0.005\n",
+       "1          1        81   A St      Allen St -71.125670  42.250592      0.005\n",
+       "2          1       242   A St  Averbuch Ter -71.125670  42.250592      0.005\n",
+       "3          1       251   A St          B St -71.125401  42.250469      0.005\n",
+       "4          1       252   A St          B St -71.125401  42.250469      0.005"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intersections_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 87,
    "metadata": {},
    "outputs": [],
