feat(data): begin functions for mkdir and file download

--- a/notebooks/00_download_datasources.ipynb
+++ b/notebooks/00_download_datasources.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "import urllib\n",
     "import os\n",
-    "import pathlib\n",
+    "from pathlib import PurePath\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
@@ -237,6 +237,273 @@
    "source": [
     "print(inventory_df.info())\n",
     "inventory_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols = ['sub-directory', 'filename', 'zipfile', 'data-url']\n",
+    "\n",
+    "download_df = inventory_df.loc[inventory_df['access']=='download'][cols]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_subdirs(subdirs, parent):\n",
+    "    \"\"\"\n",
+    "    \"\"\"\n",
+    "    # create list of current top-level files and directories\n",
+    "    existing = os.listdir(parent)\n",
+    "\n",
+    "    # check for ./data/ dir and create if it doesn't exist\n",
+    "    [\n",
+    "        os.mkdir(os.path.join(parent, subdir))\n",
+    "        for subdir in subdirs if not subdir in existing \n",
+    "    ]\n",
+    "\n",
+    "\n",
+    "def make_download_dict(inventory):\n",
+    "    \"\"\"\n",
+    "    \"\"\"\n",
+    "    subdirs = list(set(inventory['sub-directory']))\n",
+    "    inventory['file-type'] = download_df['data-url'].apply(\n",
+    "        lambda x: os.path.join(*PurePath(x).suffixes)\n",
+    "    )\n",
+    "    \n",
+    "    download_dict = {\n",
+    "        subdir: {\n",
+    "            filename: {\n",
+    "                'url': url,\n",
+    "                'file-type': suffix,\n",
+    "                'is_zip': is_zip\n",
+    "            }\n",
+    "            for filename, url, suffix, is_zip in zip(\n",
+    "                inventory.loc[inventory_df['sub-directory'] == subdir]['filename'],\n",
+    "                inventory.loc[inventory_df['sub-directory'] == subdir]['data-url'],\n",
+    "                inventory.loc[inventory_df['sub-directory'] == subdir]['file-type'],\n",
+    "                inventory.loc[inventory_df['sub-directory'] == subdir]['zipfile'],\n",
+    "            )\n",
+    "        } for subdir in subdirs\n",
+    "    }\n",
+    "    \n",
+    "    return download_dict\n",
+    "\n",
+    "\n",
+    "def download_datafiles(download_dict, parent):\n",
+    "    \"\"\"\n",
+    "    \"\"\"\n",
+    "    subdirs = download_dict.keys()\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.txt']"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PurePath('welcome.txt').suffixes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      .csv\n",
+       "1      .csv\n",
+       "2      .csv\n",
+       "3      .csv\n",
+       "4      .csv\n",
+       "5      .csv\n",
+       "6      .csv\n",
+       "7      .csv\n",
+       "8      .csv\n",
+       "9      .csv\n",
+       "10     .csv\n",
+       "11     .csv\n",
+       "12     .csv\n",
+       "13     .csv\n",
+       "14     .csv\n",
+       "15     .csv\n",
+       "16     .csv\n",
+       "17     .csv\n",
+       "18     .csv\n",
+       "19     .csv\n",
+       "20     .csv\n",
+       "21     .csv\n",
+       "22     .zip\n",
+       "23     .csv\n",
+       "24     .csv\n",
+       "25     .csv\n",
+       "26     .csv\n",
+       "30    .xlsx\n",
+       "31    .xlsx\n",
+       "32     .zip\n",
+       "33     .zip\n",
+       "34     .zip\n",
+       "35     .zip\n",
+       "36     .zip\n",
+       "37     .zip\n",
+       "38     .zip\n",
+       "39     .zip\n",
+       "40     .zip\n",
+       "41     .csv\n",
+       "42     .zip\n",
+       "43     .csv\n",
+       "44     .csv\n",
+       "45     .zip\n",
+       "46     .zip\n",
+       "Name: data-url, dtype: object"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "download_df['data-url'].apply(lambda x: os.path.join(*PurePath(x).suffixes))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parent = os.path.join(DATA_ROOT, 'raw')\n",
+    "subdirs = list(set(download_df['sub-directory']))\n",
+    "\n",
+    "make_subdirs(subdirs, parent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "download_dict = make_download_dict(download_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fy19-assessments': {'url': 'https://data.boston.gov/dataset/e02c44d2-3c64-459c-8fe2-e1ce5f38a035/resource/695a8596-5458-442b-a017-7cd72471aade/download/fy19fullpropassess.csv',\n",
+       "  'file-type': '.csv',\n",
+       "  'is_zip': 0.0},\n",
+       " 'fy18-assessments': {'url': 'https://data.boston.gov/dataset/e02c44d2-3c64-459c-8fe2-e1ce5f38a035/resource/fd351943-c2c6-4630-992d-3f895360febd/download/ast2018full.csv',\n",
+       "  'file-type': '.csv',\n",
+       "  'is_zip': nan},\n",
+       " 'fy17-assessments': {'url': 'https://data.boston.gov/dataset/e02c44d2-3c64-459c-8fe2-e1ce5f38a035/resource/062fc6fa-b5ff-4270-86cf-202225e40858/download/property-assessment-fy2017.csv',\n",
+       "  'file-type': '.csv',\n",
+       "  'is_zip': nan},\n",
+       " 'fy16-assessments': {'url': 'https://data.boston.gov/dataset/e02c44d2-3c64-459c-8fe2-e1ce5f38a035/resource/cecdf003-9348-4ddb-94e1-673b63940bb8/download/property-assessment-fy2016.csv',\n",
+       "  'file-type': '.csv',\n",
+       "  'is_zip': nan},\n",
+       " 'fy15-assessments': {'url': 'https://data.boston.gov/dataset/e02c44d2-3c64-459c-8fe2-e1ce5f38a035/resource/bdb17c2b-e9ab-44e4-a070-bf804a0e1a7f/download/property-assessment-fy2015.csv',\n",
+       "  'file-type': '.csv',\n",
+       "  'is_zip': nan},\n",
+       " 'fy14-assessments': {'url': 'https://data.boston.gov/dataset/e02c44d2-3c64-459c-8fe2-e1ce5f38a035/resource/7190b0a4-30c4-44c5-911d-c34f60b22181/download/property-assessment-fy2014.csv',\n",
+       "  'file-type': '.csv',\n",
+       "  'is_zip': nan},\n",
+       " 'fy13-assessments': {'url': 'https://data.boston.gov/dataset/e02c44d2-3c64-459c-8fe2-e1ce5f38a035/resource/425fd527-e26b-49c9-853c-1c4d3d2bdd97/download/property-assessment-fy13.csv',\n",
+       "  'file-type': '.csv',\n",
+       "  'is_zip': nan}}"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "download_dict['property']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['crime', 'bpd-fio', 'boston', 'shapefile', 'property']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subdirs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "existing = os.listdir(parent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['crime',\n",
+       " 'noaa',\n",
+       " 'bpd-fio',\n",
+       " 'property',\n",
+       " '.gitkeep',\n",
+       " 'bos_analyze',\n",
+       " 'census',\n",
+       " 'shapefile',\n",
+       " 'boston']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "existing"
    ]
   },
   {
