feat(data): add summary to notebook 000 download data

--- a/notebooks/000_download_datasources.ipynb
+++ b/notebooks/000_download_datasources.ipynb
@@ -1,8 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Notebook 000: Download Datasources\n",
+    "\n",
+    "The code in this notebook can be used to download a large portion of the `raw` data sources required for the \"Predicting Crimes\" analysis.\n",
+    "\n",
+    "If you wish bypass using this code, and would like to simply download a copy of the fully populated `raw` data directory, you can do so by clicking this link:\n",
+    "https://drive.google.com/file/d/1Pv5M-GmUY2Cvq92GDH3d_h7MvXFjgzID/view?usp=sharing\n",
+    "\n",
+    "**PLEASE NOTE:** Not included in the code below are data sources requiring API calls nor are data sources requiring web-scraping activities. Those data sources will be pulled using separate notebooks *(NOT YET COMPLETED)*.\n",
+    "\n",
+    "**Overall, 44 separate data and shape files listed in the accompanying `data-inventory.csv` file are downloaded by this notebook.**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +28,13 @@
     "import zipfile\n",
     "from pathlib import PurePath\n",
     "\n",
-    "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +161,7 @@
        "0  Gives property, or parcel, ownership together ...       2019-11-07  "
       ]
      },
-     "execution_count": 190,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,9 +224,12 @@
     "    \n",
     "    if not os.path.exists(parent):\n",
     "        os.mkdir(parent)\n",
-    "        open('.gitkeep', 'a').close()\n",
+    "        open(os.path.join(parent, '.gitkeep'), 'a').close()\n",
     "        if verbose:\n",
-    "            print('The {0} parent directory has been created.'.format(parent))\n",
+    "            print(\n",
+    "                'The {0} parent directory and accompanying .gitkeep file '\\\n",
+    "                'have been created.'.format(parent)\n",
+    "            )\n",
     "            print()\n",
     "    \n",
     "    # create list of current top-level files and directories\n",
@@ -334,29 +352,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "download_dict = make_download_dict(download_df, parent_dir)\n",
-    "\n",
-    "# make required parent and sub-directories\n",
-    "listdirs, added = make_subdirs(download_dict, parent_dir)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No directories have been created. All target directories already exist locally\n",
+      "The ../data/raw parent directory and accompanying .gitkeep file has been created.\n",
       "\n",
-      "No datafiles have been downloaded. All target files already exist locally.\n",
-      "\n"
+      "The following sub-directories were added to ../data/raw:\n",
+      "crime\n",
+      "property\n",
+      "bpd-fio\n",
+      "boston\n",
+      "shapefile\n",
+      "\n",
+      "Downloading crime-incidents data to ../data/raw/crime/crime-incidents.csv\n",
+      "Downloading fy19-assessments data to ../data/raw/property/fy19-assessments.csv\n",
+      "Downloading fy18-assessments data to ../data/raw/property/fy18-assessments.csv\n",
+      "Downloading fy17-assessments data to ../data/raw/property/fy17-assessments.csv\n",
+      "Downloading fy16-assessments data to ../data/raw/property/fy16-assessments.csv\n",
+      "Downloading fy15-assessments data to ../data/raw/property/fy15-assessments.csv\n",
+      "Downloading fy14-assessments data to ../data/raw/property/fy14-assessments.csv\n",
+      "Downloading fy13-assessments data to ../data/raw/property/fy13-assessments.csv\n",
+      "Downloading streetlights data to ../data/raw/boston/streetlights.csv\n",
+      "Downloading public-k12-schools data to ../data/raw/boston/public-k12-schools.csv\n",
+      "Downloading nonpublic-k12-schools data to ../data/raw/boston/nonpublic-k12-schools.csv\n",
+      "Downloading colleges-universities data to ../data/raw/boston/colleges-universities.csv\n",
+      "Downloading fire-depts data to ../data/raw/boston/fire-depts.csv\n",
+      "Downloading police-stations data to ../data/raw/boston/police-stations.csv\n",
+      "Downloading sam-addresses data to ../data/raw/boston/sam-addresses.csv\n",
+      "Downloading income-restricted-housing data to ../data/raw/boston/income-restricted-housing.csv\n",
+      "Downloading liquor-licenses data to ../data/raw/boston/liquor-licenses.csv\n",
+      "Downloading publicworks-violations data to ../data/raw/boston/publicworks-violations.csv\n",
+      "Downloading property-violations data to ../data/raw/boston/property-violations.csv\n",
+      "Downloading food-inspections data to ../data/raw/boston/food-inspections.csv\n",
+      "Downloading building-permits data to ../data/raw/boston/building-permits.csv\n",
+      "Downloading neighborhood-demographics-1950-2010 data to ../data/raw/boston/neighborhood-demographics-1950-2010.xlsx\n",
+      "Downloading neighborhood-demographics-2013-2017-acs data to ../data/raw/boston/neighborhood-demographics-2013-2017-acs.xlsx\n",
+      "Downloading blc-landmarks data to ../data/raw/boston/blc-landmarks.csv\n",
+      "Downloading community-centers data to ../data/raw/boston/community-centers.csv\n",
+      "Downloading public-trees data to ../data/raw/boston/public-trees.csv\n",
+      "Downloading bpd-fio-records-2016 data to ../data/raw/bpd-fio/bpd-fio-records-2016.csv\n",
+      "Downloading bpd-fio-records-2016-name-table data to ../data/raw/bpd-fio/bpd-fio-records-2016-name-table.csv\n",
+      "Downloading bpd-fio-records-2015 data to ../data/raw/bpd-fio/bpd-fio-records-2015.csv\n",
+      "Downloading bpd-fio-records-2015-name-table data to ../data/raw/bpd-fio/bpd-fio-records-2015-name-table.csv\n",
+      "Downloading bpd-fio-records-2011-2015 data to ../data/raw/bpd-fio/bpd-fio-records-2011-2015.csv\n",
+      "31 data files have been downloaded and stored locally.\n",
+      "\n",
+      "Downloading open-spaces shapefile to ../data/raw/shapefile/open-spaces.zip\n",
+      "\t...extracting shapefile zip archive to ../data/raw/shapefile/open-spaces\n",
+      "Downloading zipcodes shapefile to ../data/raw/shapefile/zipcodes.zip\n",
+      "\t...extracting shapefile zip archive to ../data/raw/shapefile/zipcodes\n",
+      "Downloading boston-neighborhoods shapefile to ../data/raw/shapefile/boston-neighborhoods.zip\n",
+      "\t...extracting shapefile zip archive to ../data/raw/shapefile/boston-neighborhoods\n",
+      "Downloading sidewalk-centerlines shapefile to ../data/raw/shapefile/sidewalk-centerlines.zip\n",
+      "\t...extracting shapefile zip archive to ../data/raw/shapefile/sidewalk-centerlines\n",
+      "Downloading planning-districts shapefile to ../data/raw/shapefile/planning-districts.zip\n",
+      "\t...extracting shapefile zip archive to ../data/raw/shapefile/planning-districts\n",
+      "Downloading water-features shapefile to ../data/raw/shapefile/water-features.zip\n",
+      "\t...extracting shapefile zip archive to ../data/raw/shapefile/water-features\n",
+      "Downloading zoning-districts shapefile to ../data/raw/shapefile/zoning-districts.zip\n",
+      "\t...extracting shapefile zip archive to ../data/raw/shapefile/zoning-districts\n",
+      "Downloading zoning-subdistricts shapefile to ../data/raw/shapefile/zoning-subdistricts.zip\n",
+      "\t...extracting shapefile zip archive to ../data/raw/shapefile/zoning-subdistricts\n",
+      "Downloading sidewalk-inventory shapefile to ../data/raw/shapefile/sidewalk-inventory.zip\n",
+      "\t...extracting shapefile zip archive to ../data/raw/shapefile/sidewalk-inventory\n",
+      "Downloading main-street-districts shapefile to ../data/raw/shapefile/main-street-districts.zip\n",
+      "\t...extracting shapefile zip archive to ../data/raw/shapefile/main-street-districts\n",
+      "Downloading city-boundary shapefile to ../data/raw/shapefile/city-boundary.zip\n",
+      "\t...extracting shapefile zip archive to ../data/raw/shapefile/city-boundary\n",
+      "Downloading census-tracts shapefile to ../data/raw/shapefile/census-tracts.zip\n",
+      "\t...extracting shapefile zip archive to ../data/raw/shapefile/census-tracts\n",
+      "Downloading street-segments shapefile to ../data/raw/shapefile/street-segments.zip\n",
+      "\t...extracting shapefile zip archive to ../data/raw/shapefile/street-segments\n",
+      "13 shapefiles have been downloaded and extracted locally.\n",
+      "\n",
+      "CPU times: user 17.3 s, sys: 8.64 s, total: 26 s\n",
+      "Wall time: 5min 43s\n"
      ]
     }
    ],
@@ -376,6 +450,13 @@
     "# download and extract shapefiles to target sub-directories\n",
     "downloaded_shape_confirmation = download_shapefiles(download_dict, parent_dir) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
