feat(data): revise relative paths to data-inventory in download .ipynb and modify instructions

--- a/notebooks/000_download_datasources.ipynb
+++ b/notebooks/000_download_datasources.ipynb
@@ -8,8 +8,14 @@
     "\n",
     "The code in this notebook can be used to download a large portion of the `raw` data sources required for the \"Predicting Crimes\" analysis.\n",
     "\n",
-    "If you wish bypass using this code, and would like to simply download a copy of the fully populated `raw` data directory, you can do so by clicking this link:\n",
-    "https://drive.google.com/file/d/1Pv5M-GmUY2Cvq92GDH3d_h7MvXFjgzID/view?usp=sharing\n",
+    "If you wish bypass using this code, and would like to simply download a copy of the fully populated `raw` data directory, you can do so by:\n",
+    "\n",
+    "1. Downloading and extracting the `./raw/` data directory found at this link:\n",
+    "    - https://drive.google.com/file/d/1Pv5M-GmUY2Cvq92GDH3d_h7MvXFjgzID/view?usp=sharing\n",
+    "\n",
+    "\n",
+    "2. Replacing your local \"raw\" data sub-directory found at `../data/raw/` in this project repository.\n",
+    "3. Please DO NOT commit any data files to your git history. \n",
     "\n",
     "**PLEASE NOTE:** Not included in the code below are data sources requiring API calls nor are data sources requiring web-scraping activities. Those data sources will be pulled using separate notebooks *(NOT YET COMPLETED)*.\n",
     "\n",
@@ -41,7 +47,7 @@
     "# set path variables\n",
     "DATA_ROOT = '../data'\n",
     "parent_dir = os.path.join(DATA_ROOT, 'raw')\n",
-    "inventory_filepath = os.path.join(DATA_ROOT, 'data-inventory.csv')"
+    "inventory_filepath = os.path.join('../data-inventory.csv')"
    ]
   },
   {
