feat(data): add function for handling NOAA download

--- a/notebooks/000_download_datasources.ipynb
+++ b/notebooks/000_download_datasources.ipynb
@@ -75,14 +75,14 @@
       "id                  47 non-null int64\n",
       "category            47 non-null object\n",
       "access              47 non-null object\n",
-      "source              44 non-null object\n",
+      "source              45 non-null object\n",
       "directory           47 non-null object\n",
       "sub-directory       47 non-null object\n",
-      "filename            44 non-null object\n",
+      "filename            45 non-null object\n",
       "zipfile             37 non-null float64\n",
       "page-url            47 non-null object\n",
-      "data-url            44 non-null object\n",
-      "reference           32 non-null object\n",
+      "data-url            45 non-null object\n",
+      "reference           33 non-null object\n",
       "description         44 non-null object\n",
       "access-confirmed    44 non-null object\n",
       "dtypes: float64(1), int64(1), object(11)\n",
@@ -180,22 +180,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# subset data inventory to include just 'downloads'\n",
+    "# subset data inventory to separate include just 'downloads'\n",
     "cols = ['sub-directory', 'filename', 'zipfile', 'data-url', 'source']\n",
-    "download_df = inventory_df.loc[inventory_df['access']=='download'][cols]"
+    "download_df = inventory_df.loc[inventory_df['access']=='download'][cols]\n",
+    "noaa_df = inventory_df.loc[inventory_df['sub-directory']=='noaa'][cols]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sub-directory</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>zipfile</th>\n",
+       "      <th>data-url</th>\n",
+       "      <th>source</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>noaa</td>\n",
+       "      <td>boston-daily-weather-20140101-20191107.csv</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>https://www.ncei.noaa.gov/access/services/data...</td>\n",
+       "      <td>data</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sub-directory                                    filename  zipfile  \\\n",
+       "29          noaa  boston-daily-weather-20140101-20191107.csv      0.0   \n",
+       "\n",
+       "                                             data-url source  \n",
+       "29  https://www.ncei.noaa.gov/access/services/data...   data  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "noaa_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_filename, headers = urllib.request.urlretrieve(\n",
+    "        noaa_df['data-url'].values[0],\n",
+    "        os.path.join('noaa-test-download.csv'),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "daily-summaries-2019-11-11T06-59-46.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(headers.get_filename())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define functions for performing data downloads\n",
+    "def make_subdir(subdir, verbose=True):\n",
+    "    \"\"\"\n",
+    "    Checks for the existance of a specified sub-directory, and if it\n",
+    "    doesn't exist, the sub-directory is created\n",
+    "    \n",
+    "    subdir: str, relative filepath of the desired subdirectory\n",
+    "    verbose: boolean, default=True, if True prints summary of action taken\n",
+    "    \n",
+    "    returns: None, sub-directory written to disk at specified filepath\n",
+    "    \"\"\"\n",
+    "    if os.path.exists(subdir):\n",
+    "        if verbose:\n",
+    "            print(\n",
+    "                'The following sub-directory already exists '\\\n",
+    "                'and was not created: {0}'.format(subdir)\n",
+    "            )\n",
+    "    \n",
+    "    else:\n",
+    "        os.mkdir(subdir)\n",
+    "        if verbose:\n",
+    "            print(\n",
+    "                'The following sub-directory was created: {0}'\\\n",
+    "                ''.format(subdir)\n",
+    "            )\n",
+    "\n",
+    "\n",
+    "def download_file(subdir, url, filename, verbose=True,\n",
+    "                  overwrite=False, return_results=False):\n",
+    "    \"\"\"\n",
+    "    Downloads a single file to the specified filepath from the given url\n",
+    "    \n",
+    "    subdir: str, the path of target directory for saving file\n",
+    "    url: str, the url from which the data will be downloaded\n",
+    "    filename: str, the desired name of the saved file\n",
+    "    verbose: boolean, default=True, if True prints summary of action taken\n",
+    "    overwrite: boolean, default=False, if True will overwrite existing local\n",
+    "               copy of the file, if False will only download file if it's\n",
+    "               filepath does not already exists\n",
+    "    return_results: boolean, default=False, if True returns new local filename\n",
+    "                    and download headers\n",
+    "               \n",
+    "    returns: if return_results=True, returns local_filename and headers from\n",
+    "             urllib.request.urlretrieve, or if local file already existed\n",
+    "             and overwrite=False returns nothing\n",
+    "    \"\"\"\n",
+    "    filepath = os.path.join(subdir, filename)\n",
+    "    \n",
+    "    # check for existence of subdir and mkdir if needed\n",
+    "    make_subdir(subdir, verbose=verbose)\n",
+    "    \n",
+    "    # overwrite existing file if it exists\n",
+    "    if overwrite:\n",
+    "        if os.path.exists(filepath):\n",
+    "            if verbose:\n",
+    "                print(\n",
+    "                    'Downloading and overwritting the existing '\\\n",
+    "                    'local file: {0}'.format(filepath)\n",
+    "                )\n",
+    "            local_filename, headers = urllib.request.urlretrieve(\n",
+    "                url,\n",
+    "                filepath,\n",
+    "            )\n",
+    "            if return_results:\n",
+    "                return local_filename, headers\n",
+    "    \n",
+    "    # write file to disk if it does not already exist\n",
+    "    if not os.path.exists(filepath):\n",
+    "        if verbose:\n",
+    "            print(\n",
+    "                'Downloading {0} data to {1}'.format(subdir, filepath)\n",
+    "            )                \n",
+    "        local_filename, headers = urllib.request.urlretrieve(\n",
+    "            url,\n",
+    "            filepath,\n",
+    "        )\n",
+    "        if return_results:\n",
+    "            return local_filename, headers\n",
+    "    \n",
+    "    # handle situation where filepath exists and will not be overwritten\n",
+    "    if not overwrite:\n",
+    "        if os.path.exists(filepath):\n",
+    "            if verbose:\n",
+    "                print(\n",
+    "                    'The following local file already exists and '\\\n",
+    "                    'was not overwritten: {0}'.format(filepath)\n",
+    "                )\n",
+    "            if return_results:\n",
+    "                return None, None\n",
+    "\n",
     "\n",
     "def make_download_dict(inventory, parent):\n",
     "    \"\"\"\n",
@@ -354,6 +536,87 @@
     "            )\n",
     "            \n",
     "    return downloaded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following sub-directory already exists and was not created: ../data/raw/noaa\n"
+     ]
+    }
+   ],
+   "source": [
+    "make_subdir(os.path.join(parent_dir, 'noaa'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'boston-daily-weather-20140101-20191107.csv'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "noaa_df['filename'].values[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following sub-directory already exists and was not created: ../data/raw/noaa\n",
+      "The following local file already exists and was not overwritten: ../data/raw/noaa/boston-daily-weather-20140101-20191107.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = download_file(\n",
+    "    subdir=os.path.join(parent_dir, 'noaa'),\n",
+    "    url=noaa_df['data-url'].values[0],\n",
+    "    filename=noaa_df['filename'].values[0],\n",
+    "    return_results=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('../data/raw/noaa/boston-daily-weather-20140101-20191107.csv',\n",
+       " <http.client.HTTPMessage at 0x7f7ad60bbcd0>)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
    ]
   },
   {
